istio/security/authn-meshwide.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: peer-authn-meshwide
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
