istio/security/authn-namespace.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: peer-authn-namespace
  namespace: default
spec:
  mtls:
    mode: STRICT
