istio/security/authn-workload.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: peer-authn-workload
  namespace: default
spec:
  selector:
    matchLabels:
      app: frontend-app
  mtls:
    mode: STRICT
