istio/security/authz-allow-noting.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
 name: authz-allow-nothing
 namespace: default
spec:
  {}
