istio/security/authz-allow-reviews.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
 name: authz-allow-reviews-viewer
 namespace: default
spec:
 selector:
   matchLabels:
     app: reviews-app
 action: ALLOW
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/default/sa/frontend-sa"]
   to:
   - operation:
       methods: ["GET"]
